--- a/spring-boot-api-rest/challenge/src/main/resources/application.properties
+++ b/spring-boot-api-rest/challenge/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 server.port=8090
-spring.datasource.url=jdbc:mysql://localhost/challenge?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/challenge?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 loggin.level.org.hibernate.SQL=debug
