--- a/spring-boot-api-rest/challenge/src/main/resources/application.properties
+++ b/spring-boot-api-rest/challenge/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 loggin.level.org.hibernate.SQL=debug
+spring.mvc.throw-exception-if-no-handler-found=true
