--- a/spring-security/03-spring-security-authentication-architecture/src/main/resources/application.properties
+++ b/spring-security/03-spring-security-authentication-architecture/src/main/resources/application.properties
@@ -9,3 +9,13 @@ spring.jpa.show-sql=true
 spring.data.web.pageable.page-parameter=p
 # cambio nombre del parametro "size"
 spring.data.web.pageable.size-parameter=limit
+
+
+
+
+
+
+
+
+security.jwt,expiration-in-minuts=30
+security.jwt,secrete-key=mi clave es muy segura
