--- a/spring-security/03-spring-security-authentication-architecture/src/main/resources/application.properties
+++ b/spring-security/03-spring-security-authentication-architecture/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # por defecto es localhost:8080/controller
 server.servlet.context-path=/api/v1
 # cambiar el puerto
-server.port=8080
+server.port=8081
 # mostrar sql generados en el import.sql
 spring.jpa.show-sql=true
 # cambio nombre del parametro "page"
@@ -12,10 +12,5 @@ spring.data.web.pageable.size-parameter=limit
 
 
 
-
-
-
-
-
 security.jwt,expiration-in-minuts=30
-security.jwt,secrete-key=mi clave es muy segura
+security.jwt,secrete-key=mi clave es muy segura 12345678 abcdefg
