--- a/spring-security/03-spring-security-authentication-architecture/pom.xml
+++ b/spring-security/03-spring-security-authentication-architecture/pom.xml
@@ -65,10 +65,15 @@
 			<version>${jjwt.version}</version>
 			<scope>runtime</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>24.0.1</version>
+            <scope>compile</scope>
+        </dependency>
 
 
-
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
