--- a/spring-security/08-custom-authorization/src/main/resources/application.properties
+++ b/spring-security/08-custom-authorization/src/main/resources/application.properties
@@ -6,5 +6,6 @@ spring.jpa.show-sql=true
 spring.data.web.pageable.page-parameter=p
 spring.data.web.pageable.size-parameter=limit
 
+security.default.role=COSTUMER
 security.jwt.expiration-in-minutes=30
 security.jwt.secret-key=bWkgY2xhdmUgZXMgbXV5IHNlZ3VyYSAxMjM0NTY3OCBhYmNkZWZn
