--- a/spring-security/11-docker/src/main/resources/application.properties
+++ b/spring-security/11-docker/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.profiles.active=local
+spring.profiles.active=docker
 server.servlet.context-path=/api/v1
-server.port=8081
+server.port=9191
 
 spring.jpa.show-sql=true
 
@@ -14,5 +14,4 @@ security.jwt.secret-key=bWkgY2xhdmUgZXMgbXV5IHNlZ3VyYSAxMjM0NTY3OCBhYmNkZWZn
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=create-drop
-
 
