docker compose practice

--- a/docker-compose/servidor/src/main/resources/application.properties
+++ b/docker-compose/servidor/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.application.name=servidor
+spring.profiles.active=dev
+server.servlet.context-path=/api/v1
+server.port=9090
+
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.show-sql=true
