--- a/docker-compose/servidor/src/main/resources/application-local.properties
+++ b/docker-compose/servidor/src/main/resources/application-local.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/course?useSSL=false&useTimezone=true&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3308/client?useSSL=false&useTimezone=true&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
