server profiles bug fixed

--- a/docker-compose/servidor/src/main/resources/application.properties
+++ b/docker-compose/servidor/src/main/resources/application.properties
@@ -2,8 +2,11 @@ spring.profiles.active=docker
 server.servlet.context-path=/api/v1
 server.port=9090
 
+spring.jpa.show-sql=true
+
+spring.data.web.pageable.page-parameter=p
+spring.data.web.pageable.size-parameter=limit
+
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=create-drop
-
-spring.jpa.show-sql=true
