--- a/docker-compose/servidor/src/main/resources/application-dev.properties
+++ b/docker-compose/servidor/src/main/resources/application-dev.properties
@@ -5,4 +5,4 @@ spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.sql.init.platform=-dev
+spring.sql.init.platform=dev
