--- a/spring-boot-security/13-OAuth2/spring-security-course/src/main/resources/application.properties
+++ b/spring-boot-security/13-OAuth2/spring-security-course/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.profiles.active=local
+spring.profiles.active=docker
+
 server.servlet.context-path=/api/v1
 server.port=9191
 
@@ -11,7 +12,7 @@ security.default.role=CUSTOMER
 security.jwt.expiration-in-minutes=30
 security.jwt.secret-key=bWkgY2xhdmUgZXMgbXV5IHNlZ3VyYSAxMjM0NTY3OCBhYmNkZWZn
 
+
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=create-drop
-
