--- a/spring-boot-security/13-OAuth2/spring-security-course/src/main/resources/application-dev.properties
+++ b/spring-boot-security/13-OAuth2/spring-security-course/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://my-mysql:3308/course
+spring.datasource.url=jdbc:mysql://localhost:3308/course
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
