--- a/spring-boot-security/13-OAuth2/spring-security-course/src/main/resources/application.properties
+++ b/spring-boot-security/13-OAuth2/spring-security-course/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=docker
+spring.profiles.active=dev
 
 server.servlet.context-path=/api/v1
 server.port=9191
@@ -15,4 +15,4 @@ security.jwt.secret-key=bWkgY2xhdmUgZXMgbXV5IHNlZ3VyYSAxMjM0NTY3OCBhYmNkZWZn
 
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
