--- a/spring-boot-security/13-OAuth2/spring-security-course/src/main/resources/application.properties
+++ b/spring-boot-security/13-OAuth2/spring-security-course/src/main/resources/application.properties
@@ -16,3 +16,7 @@ security.jwt.secret-key=bWkgY2xhdmUgZXMgbXV5IHNlZ3VyYSAxMjM0NTY3OCBhYmNkZWZn
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=update
+
+# vincular servidores
+# firmante:
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9595/authorization-server
