spring security curso terminado

--- a/spring-boot-security/13-OAuth2/spring-security-course/src/main/resources/application.properties
+++ b/spring-boot-security/13-OAuth2/spring-security-course/src/main/resources/application.properties
@@ -13,9 +13,9 @@ security.jwt.expiration-in-minutes=30
 security.jwt.secret-key=bWkgY2xhdmUgZXMgbXV5IHNlZ3VyYSAxMjM0NTY3OCBhYmNkZWZn
 
 
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
-spring.jpa.hibernate.ddl-auto=update
+#spring.sql.init.mode=always
+#spring.jpa.defer-datasource-initialization=true
+#spring.jpa.hibernate.ddl-auto=update
 
 # vincular servidores
 # firmante:
